# lba2-classic

./: CMakeLists.txt  main.cpp
LIB386/3D/: ARCSIN.CPP  CAMERA.CPP  GETANG2D.CPP  GETANG3D.CPP  LIGHT.CPP  MOVE.CPP  SINTAB.CPP  SINTABF.CPP  SQRROOT.CPP  TANTAB.CPP
LIB386/FILEIO/: SAVEPCX.CPP
LIB386/H/: 3D.H  3D_CONSTANTS.H  ANIM.H  INITADEL.C  MENU.H  OBJECT.H  POLYGON.H  SMACKER.H  SVGA.H  SYSTEM.H
LIB386/H/3D/: ARCSIN.H  CAMERA.H  COPYMAT.H  GETANG2D.H  GETANG3D.H  IMAT.H  IMAT3DS.H  IMATSTD.H  IROT3D.H  LIGHT.H  LIROT3D.H  LROT3D.H  LROTLIST.H  LROTRALI.H  MAT.H  MULMAT.H  ROT2D.H  ROTLIST.H  ROTMAT.H  ROTRALIS.H  SINTAB.H  SQRROOT.H  TANTAB.H
LIB386/H/AIL/: COMMON.H  SAMPLE.H
LIB386/H/ANIM/: ANIM.H
LIB386/H/MENU/: MENULIB.H
LIB386/H/POLYGON/: CLIPPERZ.H  TESTVUE.H
LIB386/H/SVGA/: CLEABOV.H  CLIP.H  CLRBOX.H  COPYBOX.H  COPYMASK.H  DIRTYBOX.H  FONT.H  GPRINTF.H  GRAPH.H  LOGPHYS.H  MASK.H  PAL.H  RESBLOCK.H  SAVBLOCK.H  copybov.h
LIB386/H/SYSTEM/: ADELINE.H  A_MALLOC.H  CMDLINE.H  DEFFILE.H  DISPOS.H  EXIT.H  FILENAME.H  FILES.H  HQFILE.H  HQR.H  HQRLOAD.H  HQRMEM.H  HQRRESS.H  INITIMER.H  INITKEYB.H  ITOA.H  KEYBWIN.H  LOADSAVE.H  LOGPRINT.H  LZ.H  TIMERWIN.H  WINSYS.H
LIB386/MENU/: MENUFUNC.CPP  MENULIB.CPP  SELECTOR.CPP
LIB386/SVGA/: CLIP.CPP  CLRBOX.CPP  COPYBOX.CPP  DDRAW.CPP  DIRTYBOX.CPP  GPRINTF.CPP  GRAPH.CPP  INIMOUSE.CPP  INITMODE.CPP  LOGPHYS.CPP  MOUSEDOS.CPP  MOUSEWIN.CPP  PAL.CPP  PLOT.CPP  RECT.CPP  RESBLOCK.CPP  SAVBLOCK.CPP
LIB386/SYSTEM/: AVAILMEM.CPP  A_MALLOC.CPP  CMDLINE.CPP  CPU.ASM  DEFFILE.CPP  DISKDIR.CPP  DISPCPU.CPP  DISPOS.CPP  EXIT.CPP  FILEBAK.cpp  FILECOPY.cpp  FILENAME.cpp  FILES.CPP  HQFILE.CPP  HQMEM.CPP  HQRLOAD.CPP  HQRMEM.cpp  HQRMLOAD.cpp  HQRRESS.CPP  INITIMER.CPP  INITKEYB.CPP  INPUT.CPP  ITOA.CPP  KEYBWIN.CPP  LOADMALL.CPP  LOADSAVE.cpp  LOGPRINT.CPP  LZ.CPP  N_MALLOC.CPP  SCANINP.CPP  S_MALLOC.CPP  TIMERWIN.CPP  WIN.CPP  WINSYS.CPP
LIB386/ail/: CD.CPP  COMMON.CPP  MIDDIG.CPP  MIDI.CPP  MIXER.CPP  SAMPLE.CPP  STREAM.CPP  TIMER.CPP
LIB386/smacker/: SMACKER.CPP
SOURCES/: AMBIANCE.CPP  ANIMTEX.CPP  BEZIER.CPP  BUGGY.CPP  CHEATCOD.CPP  COMMON.H  COMPORTE.CPP  CONFIG.CPP  CREDITS.CPP  CRITICAL.CPP  CRITICAL.H  C_EXTERN.H  DART.CPP  DEFINES.H  DISKFUNC.CPP  EXTFUNC.CPP  EXTRA.CPP  FICHE.CPP  FLOW.CPP  FUNC.H  GAMEMENU.CPP  GERELIFE.CPP  GERETRAK.CPP  GLOBAL.CPP  GRILLE.CPP  HOLOBODY.CPP  HOLOGLOB.CPP  HOLOPLAN.CPP  IMPACT.CPP  INCRUST.CPP  INPUT.CPP  INPUT.H  INTEXT.CPP  INVENT.CPP  JOYSTICK.CPP  KEYB.H  LZSS.CPP  MEM.CPP  MEM.H  MESSAGE.CPP  (+18 more)
SOURCES/3DEXT/: DECORS.CPP  DEFINES.H  EXTERN.H  GLOBEXT.CPP  LBA_EXT.H  LOADISLE.CPP  TERRAIN.CPP  VAR_EXT.CPP  VAR_EXT.H
SOURCES/CONFIG/: ADDKEYS.H  AFFKEY.CPP  CONFIG.CPP  C_EXTERN.H  INPUT.CPP  INPUT.H  MAIN.CPP
