cmake_minimum_required(VERSION 3.0.0)
project(LBA2-CLASSIC VERSION 0.1.0)

# TODO: Allow using SDL2 framework included in the project?
# Right now it's necessary to copy SDL2.framework to /Library/Frameworks
# set(CMAKE_FRAMEWORK_PATH "${CMAKE_CURRENT_SOURCE_DIR}/Frameworks")
find_package(SDL2 REQUIRED COMPONENTS SDL2)

add_executable(LBA2-CLASSIC
  # main.cpp
  SOURCES/AMBIANCE.CPP
  SOURCES/PERSO.CPP
  SOURCES/GLOBAL.CPP
  SOURCES/INTEXT.CPP
  SOURCES/EXTFUNC.CPP
  SOURCES/OBJECT.CPP
  SOURCES/MUSIC.CPP
  SOURCES/DART.CPP
  LIB386/3D/ARCSIN.CPP
  LIB386/3D/GETANG3D.CPP
  LIB386/3D/LIGHT.CPP
  LIB386/3D/SINTAB.CPP
  LIB386/3D/SINTABF.CPP
  LIB386/3D/SQRROOT.CPP
  LIB386/3D/TANTAB.CPP
  LIB386/SVGA/LOGPHYS.CPP
  LIB386/SYSTEM/CMDLINE.CPP
  LIB386/SYSTEM/DEFFILE.CPP
  LIB386/SYSTEM/FILENAME.CPP
  LIB386/SYSTEM/FILES.CPP
  LIB386/SYSTEM/HQRRESS.CPP
  LIB386/SYSTEM/LOADSAVE.cpp
  LIB386/SYSTEM/LOGPRINT.CPP
)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)

target_include_directories(LBA2-CLASSIC PRIVATE SOURCES "LIB386/H")
target_link_libraries(LBA2-CLASSIC PRIVATE SDL2::SDL2)
