cmake_minimum_required(VERSION 3.0.0)
project(LBA2-CLASSIC VERSION 0.1.0)

# TODO: Allow using SDL2 framework included in the project?
# Right now it's necessary to copy SDL2.framework to /Library/Frameworks
# set(CMAKE_FRAMEWORK_PATH "${CMAKE_CURRENT_SOURCE_DIR}/Frameworks")
find_package(SDL2 REQUIRED COMPONENTS SDL2)

add_executable(LBA2-CLASSIC
  # SOURCES/CONFIG/MAIN.CPP
  LIB386/3D/ARCSIN.CPP
  LIB386/3D/CAMERA.CPP
  LIB386/3D/GETANG2D.CPP
  LIB386/3D/GETANG3D.CPP
  LIB386/3D/LIGHT.CPP
  LIB386/3D/SINTAB.CPP
  LIB386/3D/SINTABF.CPP
  LIB386/3D/SQRROOT.CPP
  LIB386/3D/TANTAB.CPP
  LIB386/AIL/COMMON.CPP
  LIB386/AIL/SAMPLE.CPP
  LIB386/SMACKER/SMACKER.CPP
  LIB386/SVGA/CLIP.CPP
  LIB386/SVGA/CLRBOX.CPP
  LIB386/SVGA/COPYBOX.CPP
  LIB386/SVGA/DIRTYBOX.CPP
  LIB386/SVGA/GRAPH.CPP
  LIB386/SVGA/INIMOUSE.CPP
  LIB386/SVGA/INITMODE.CPP
  LIB386/SVGA/LOGPHYS.CPP
  LIB386/SVGA/RESBLOCK.CPP
  LIB386/SVGA/SAVBLOCK.CPP
  LIB386/SYSTEM/A_MALLOC.CPP
  LIB386/SYSTEM/AVAILMEM.CPP
  LIB386/SYSTEM/CMDLINE.CPP
  LIB386/SYSTEM/DEFFILE.CPP
  LIB386/SYSTEM/DISKDIR.CPP
  LIB386/SYSTEM/EXIT.CPP
  LIB386/SYSTEM/FILENAME.CPP
  LIB386/SYSTEM/FILES.CPP
  LIB386/SYSTEM/HQFILE.CPP
  LIB386/SYSTEM/HQRLOAD.CPP
  LIB386/SYSTEM/HQRRESS.CPP
  LIB386/SYSTEM/INITIMER.CPP
  LIB386/SYSTEM/INITKEYB.CPP
  LIB386/SYSTEM/LOADMALL.CPP
  LIB386/SYSTEM/LOADSAVE.cpp
  LIB386/SYSTEM/LOGPRINT.CPP
  LIB386/SYSTEM/LZ.CPP
  LIB386/SYSTEM/N_MALLOC.CPP
  SOURCES/3DEXT/GLOBEXT.CPP
  SOURCES/AMBIANCE.CPP
  SOURCES/DART.CPP
  SOURCES/EXTFUNC.CPP
  SOURCES/GAMEMENU.CPP
  SOURCES/GLOBAL.CPP
  SOURCES/INTEXT.CPP
  SOURCES/MEM.CPP
  SOURCES/MESSAGE.CPP
  SOURCES/MUSIC.CPP
  SOURCES/OBJECT.CPP
  SOURCES/PERSO.CPP
)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)

target_include_directories(LBA2-CLASSIC PRIVATE SOURCES "LIB386/H")
target_link_libraries(LBA2-CLASSIC PRIVATE SDL2::SDL2)
